# docs/swagger.json
@@ -140,6 +140,45 @@
         }
       }
     },
+    "/api/monitors/cert-exp-countdown/{id}": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CertificateExpiryCountDown"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Monitor ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "string",
+              "description": "Monitor ID"
+            }
+          }
+        ]
+      }
+    },
     "/api/monitors/create": {
       "post": {
         "responses": {
@@ -625,6 +664,17 @@
             "type": "integer"
           },
           "method": {
+            "type": "string"
+          }
+        }
+      },
+      "CertificateExpiryCountDown": {
+        "type": "object",
+        "properties": {
+          "daysUntilExpiration": {
+            "type": "integer"
+          },
+          "message": {
             "type": "string"
           }
         }
