# routes/monitor_routes.go
@@ -20,4 +20,5 @@ func MonitorRoutes(app *fiber.App) {
 	route.Get("/list", middleware.Protected, controllers.MonitorsList)
 	route.Get("/summary/:id", middleware.Protected, controllers.MonitorSummary)
 	route.Get("/heartbeat/:id", middleware.Protected, controllers.RetrieveHeartbeat)
+	route.Get("/cert-exp-countdown/:id", controllers.CertificateExpiryCountDown)
 }
